--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "chess.js": "^0.11.0",
     "chessboardjsx": "^2.4.2",
     "react": "^17.0.1",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
